--- a/_posts/2019-09-05-post-snmpv3.markdown
+++ b/_posts/2019-09-05-post-snmpv3.markdown
@@ -2,10 +2,10 @@
 layout: post
 title:  "SNMPv3"
 date:   2019-09-05 11:49:15 +0300
-categories: networking
+categories: networking snmp
 ---
 
-## SNMP v3
+# SNMP v3 # 
 
 Добавьте в /var/net-snmp/snmptrapd.conf следующую строку:
 ```
@@ -17,17 +17,17 @@ categories: networking
 
 
 Используйте команду терминала конфигурации, чтобы войти в режим конфигурации.
-
+```
 Switch# configure terminal
-
+```
 Используйте следующую команду для включения и настройки Cisco SNMP версии 3.
-
+```
 Switch(config)# snmp-server group Universe7 v3 priv
 Switch(config)# snmp-server user goku Universe7 v3 auth sha 0123456789 priv aes 128 9876543210
 Switch(config)# snmp-server contact Zamasu <zamasu@dbsuper.com>
 Switch(config)# snmp-server location Universe10 - IT Room
 Switch(config)# exit
-
+```
 Настройка сервера
 Чтобы проверить конфигурацию CiscoV3, используйте следующие команды на компьютере под управлением Ubuntu Linux.
 ```
@@ -36,35 +36,40 @@ Switch(config)# exit
 ```
 
 
- SNMP V3 на маршрутизаторе
+## SNMP V3 на маршрутизаторе
 Сначала сделаем ACL с указанием с каких машин/сетей, разрешен доступ по SNMP
 например:
+```
 access-list 3 permit 192.168.1.0 0.0.0.255
-
+```
 Затем создаем view и можем указать какие MIB будут доступны
+```
 snmp-server view READ iso included
-
+```
 Создаем группу, в данном случае разрешается только чтение с сети 192.168.1.0/24
+```
 snmp-server group SNMP_G v3 priv read READ access 3
-
+```
 Создаем пользователя, который входит в выше описанную группу:
+```
 snmp-server user SNMP_U SNMP_G v3 auth sha Cisco priv des Systems
-
+```
 Красным отмечены пароли.
 
 Ну и укажем, кто будет получать SNMP traps:
+```
 snmp-server host 192.168.1.3 version 3 auth SNMP_U 
-
+```
 
 
 Часть 1
-
+```
 Router(config)# snmp-server view SNMP-RO system included
 Router(config)# snmp-server view SNMP-RO mib-2 included
 Router(config)# snmp-server group TEST v3 priv read SNMP-RO access SNMP_ACL
 Router(config)# snmp-server user ADMIN TEST v3 auth sha cisco123 priv aes 128 snmp321
 Router(config)# snmp-server enable traps snmp
-
+```
 Агент SNMPv3 настраивается по-другому нежели SNMPv1/SNMPv2:
 
 Вместо строки сообщества создаётся пользователь с паролем (cisco123) и шифрованием (aes 128, ключ шифрования snmp321)  - следует запомнить, что первым указывается пароль пользователя (auth sha cisco123) и вторым ключ шифрования (aes 128 snmp321). Это важно.
@@ -72,47 +77,47 @@ Router(config)# snmp-server enable traps snmp
 Предварительно для пользователя создаётся группа, а ещё ранее вид. Вид определяет с какой частью дерева MIB предстоит работать.
 
 Ещё раз по командам:
-
+```
     Команда 1 - создание вида (SNMP-RO) для работы с веткой MIB (system).
     Команда 2 - создание вида (SNMP-RO) для работы с веткой MIB (mib-2), mib-2 входит в system - эта команда только для примера, что можно добавлять несколько веток.
     Команда 3 - создание группы (TEST) версии 3 (v3) с аутентификацией и шифрованием (priv) только для чтения (read) для вида (SNMP-RO) и списком доступа (SNMP_ACL).
     Команда 4 - создание пользователя (ADMIN) в группе (TEST) версии 3 (v3) аутентификацией по алгоритму (sha), паролем (cisco123) и шифрованием (priv) по алгоритму (aes 128) и ключом шифрования (snmp321).
     Команда 5 - включаем ловушки и определение типов ловушек (snmp).
-
+```
     
     
-    
+``` 
     auth - group using the authNoPriv Security Level (MD5/SHA-1 аутентификация, без шифрования данных);
     noauth - group using the noAuthNoPriv Security Level (без аутентификации и шифрования);
     priv - group using SNMPv3 authPriv security level (MD5/SHA-1 аутентификация, шифрование данных DES/3DES/AES)
-
-    
+```
+``` 
     Router(config)# snmp-server enable traps snmp
 Router(config)# snmp-server host 192.168.137.40 version 3 auth ADMIN
-
+```
 
 EngineID - характерезует агента, сервер получает эти данные при опросе
 
 При snmp v3 trap надо указывать EngineID, при  не надо в настройках сервера
-
+```
 In a /tmp/snmptrapd.conf file put:
 
  createUser -e 0x8000000001020304 traptest SHA mypassword AES
  authuser log traptest
-
+```
 SNMPv3 INFORM
-
+```
 In a /tmp/snmptrapd.conf file put:
 
  createUser informtest SHA mypassword AES
  authuser log informtest
+```
 
-
-[https://blog.ine.com/2008/07/19/snmpv3-tutorial](https://blog.ine.com/2008/07/19/snmpv3-tutorial)
-[http://vladimir-stupin.blogspot.com/2016/09/](http://vladimir-stupin.blogspot.com/2016/09/)
-[https://www.opsview.com/resources/how-to/blog/setting-snmpv3-traps](https://www.opsview.com/resources/how-to/blog/setting-snmpv3-traps)
-[http://www.net-snmp.org/wiki/index.php/TUT:Configuring_snmptrapd_to_receive_SNMPv3_notifications](http://www.net-snmp.org/wiki/index.php/TUT:Configuring_snmptrapd_to_receive_SNMPv3_notifications)
-[https://wiki.debian.org/SNMP][https://wiki.debian.org/SNMP][https://wiki.debian.org/SNMP](https://wiki.debian.org/SNMP)
+ - [https://blog.ine.com/2008/07/19/snmpv3-tutorial](https://blog.ine.com/2008/07/19/snmpv3-tutorial)
+ - [http://vladimir-stupin.blogspot.com/2016/09/](http://vladimir-stupin.blogspot.com/2016/09/)
+ - [https://www.opsview.com/resources/how-to/blog/setting-snmpv3-traps](https://www.opsview.com/resources/how-to/blog/setting-snmpv3-traps)
+ - [http://www.net-snmp.org/wiki/index.php/TUT:Configuring_snmptrapd_to_receive_SNMPv3_notifications](http://www.net-snmp.org/wiki/index.php/TUT:Configuring_snmptrapd_to_receive_SNMPv3_notifications)
+ - [https://wiki.debian.org/SNMP][https://wiki.debian.org/SNMP][https://wiki.debian.org/SNMP](https://wiki.debian.org/SNMP)
 
 
 
