--- a/_posts/bash/2010-03-28-bash_mail.markdown
+++ b/_posts/bash/2010-03-28-bash_mail.markdown
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "bash_mail"
+title:  "sms bash_mail"
 date:   2010-03-28 08:12:24 +0400
-categories: bash_mail
-tags: bash_mail
+categories: bash
+tags: bash
 ---
 
-# bash_mail
+# Реализация отправки смс из-под bash-скриптов
 Хочу поделиться реализацией отправки смс из-под bash-скриптов. Может, кому-то будет полезно. Я, например, таким образом сделал смс-уведомления при отключении питания.
 
 Сообщения я отправляю через email2sms шлюз провайдера. Для моего прова ссылка для настройки следующая:
