--- a/_posts/bash/2012-01-24-pdf2fb2.markdown
+++ b/_posts/bash/2012-01-24-pdf2fb2.markdown
@@ -2,8 +2,8 @@
 layout: post
 title:  "pdf2fb2"
 date:   2012-01-24 12:32:19 +0400
-categories: pdf2fb2
-tags: pdf2fb2
+categories: bash
+tags: bash
 ---
 
 # pdf2fb2
