--- a/_posts/bash/2014-06-02-2>&1.markdown
+++ b/_posts/bash/2014-06-02-2>&1.markdown
@@ -2,8 +2,8 @@
 layout: post
 title:  "2>&1"
 date:   2014-06-02 09:02:07 +0400
-categories: 2>&1
-tags: 2>&1
+categories: bash
+tags: bash
 ---
 
 # 2>&1
@@ -22,7 +22,8 @@ tags: 2>&1
 При интерактивном запуске программы по умолчанию нацелен на запись на устройство отображения (монитор). 
 Командная оболочка UNIX (и оболочки других систем) позволяют перенаправить этот поток с помощью символа «>». 
 Средства для выполнения программ в фоновом режиме (например, nohup) обычно переназначают этот поток в файл.
-Стандартный вывод ошибок
+
+## Стандартный вывод ошибок
 
 Поток номер 2 (stderr) зарезервирован для вывода диагностических и отладочных сообщений в текстовом виде.
 
