--- a/_posts/cacti/2015-02-18-cacti-asr.markdown
+++ b/_posts/cacti/2015-02-18-cacti-asr.markdown
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  "cacti-asr"
+title:  "Asr cisco и cacti"
 date:   2015-02-18 01:28:00 +0300
-categories: cacti-asr
-tags: cacti
+categories: cacti
+tags: cacti cisco
 ---
 
-# cacti-asr
-show platform software status control-processor brief
+# Asr cisco и cacti
+`show platform software status control-processor brief`
 
 память
 1.3.6.1.4.1.9.9.109.1.1.1.1.13.2
@@ -130,12 +130,7 @@ CPU 5 min
 ctd-c6
 
  ESP0
- 2
+
  .1.3.6.1.4.1.9.9.109.1.1.1.1.26.2
 
- 
- RP
- 3
- 
- SIP0
- 4
+
