--- a/_posts/certification/2012-10-14-ccna.markdown
+++ b/_posts/certification/2012-10-14-ccna.markdown
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "ccna"
+title:  "CCNA"
 date:   2012-10-14 01:10:44 +0400
-categories: ccna
-tags: certification
+categories: certification
+tags: certification ccna
 ---
 
-# ccna
+# CCNA
 [http://habrahabr.ru/company/skillfactory/blog/168595/](http://habrahabr.ru/company/skillfactory/blog/168595/)
 [http://habrahabr.ru/post/155329/](http://habrahabr.ru/post/155329/)
 [http://habrahabr.ru/post/123646/](http://habrahabr.ru/post/123646/)
