--- a/_posts/crypt/2013-04-03-информационная_безопасность.markdown
+++ b/_posts/crypt/2013-04-03-информационная_безопасность.markdown
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "информационная_безопасность"
+title:  "Информационная_безопасность"
 date:   2013-04-03 08:27:30 +0400
-categories: информационная_безопасность
+categories: crypt
 tags: crypt
 ---
 
-# информационная_безопасность
+# Информационная_безопасность
 Форумы
 
 О форумах [https://grabberz.com/showthread.php?t=13123](https://grabberz.com/showthread.php?t=13123)
