--- a/_posts/ddos/2016-01-02-ddos.markdown
+++ b/_posts/ddos/2016-01-02-ddos.markdown
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "ddos"
+title:  "Ddos - подборка ссылок"
 date:   2016-01-02 08:58:26 +0300
 categories: ddos
 tags: ddos
 ---
 
-# ddos
+# Ddos
 [http://habrahabr.ru/post/51574/](http://habrahabr.ru/post/51574/)
 [http://habrahabr.ru/post/213973/](http://habrahabr.ru/post/213973/)
 [http://habrahabr.ru/post/215543/](http://habrahabr.ru/post/215543/)
